Messages: Decrease button spacing to stop overflow

--- a/css/messages.css
+++ b/css/messages.css
@@ -16,3 +16,7 @@ body .content .btr-CurrentPage {
 
 	color: #191919;
 }
+
+.btr-messages .message-actions .btn-control-sm {
+	margin-right: 6px;
+}
